change user management as requested

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -172,7 +172,7 @@
                     <tr>
                         <th data-name="ip" data-type="text" class="translate">IP</th>
                         <th data-name="name" data-type="text" class="translate">Name</th>
-                        <th data-name="isAdmin" data-type="checkbox" style="width: 130px;" data-tdstyle="text-align: center" class="translate">Admin-Login?</th>
+                        <th data-name="user" data-type="text" class="translate">Username</th>
                         <th data-name="password" data-type="password" class="translate">Password</th>
                         <th style="width: 130px;" data-buttons="delete up down"></th>
                     </tr>
