--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -54,7 +54,7 @@
 
                         if (!found) {
                             added++;
-                            devices.push({ip: list[j].ip, name: list[j].name, isAdmin: false, password: '0000'});
+                            devices.push({ip: list[j].ip, name: list[j].name, user: 'user', password: '0000'});
                         }
                     }
                 }
